<resources>
    <string name="app_name">Credit Card Helper</string>
    <string name="button1">COMPUTE</string>
    <string name="button2">CLEAR</string>
    <string name="text_view2">Enter Card Balance ($)</string>
    <string name="text_view3">Enter Yearly Interest Rate (%)</string>
    <string name="text_view4">Enter Minimum Payment ($)</string>
    <string name="text_view5">Final Card Balance ($)</string>
    <string name="text_view6">Months Remaining</string>
    <string name="text_view7">Interest Paid Will Be ($)</string>
</resources>
